..F....... [ZBXNEXT-1113] redesign Configuration->Host->Discovery rules (Eduard)
..F....... [ZBXNEXT-1107] redesign Configuration->Audit (Eduard)
....I..PS. [ZBX-2604] added processing of not supported items monitored by a proxy (Sasha)
..F....... [ZBXNEXT-903] redesign Configuration->Items (Eduard)
..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)

Bug fixes:
..F....... [ZBX-4365] added plural translation support for the failed login attempt message (Pavels)
..F....... [ZBX-4365] fixed user being redirected to the dashboard after trying to login with an incorrect password (Pavels)
..F....... [ZBX-3528] fixed letter numbering of long lists (Vedmak)
...G.J.PS. [ZBX-4725] fixed processing lld rules with macros in a key (Sasha)
..F....... [ZBX-4730] removed incorrect JS function call in the event history screen (Pavels)
..F....... [ZBX-3522] fixed errors when insert too long values to user_history and profiles tables (Vedmak)
A.F....... [ZBX-4333] fixed trigger inheritance when calling trigger.update whithout a trigger expression (Pavels)
..F....... [ZBX-4333] fixed host trigger mass update (Pavels)
..F....... [ZBX-4333] fixed trigger dependency copying (Pavels)
.......S.. [ZBX-4629] fixed processing Y axis min/max values for graph prototypes (Sasha)
..F....... [ZBX-4641] fixed errors in a "Discovery checks" popup (Sasha)
A.F....... [ZBX-4202] fixed SQL performance in tr_status.php - combined similar queries, user data SQL access only once, triggerids retrieval optimization (Toms)
A.F....... [ZBX-4647] fixed trigger and item prototype inheritance (Pavels)
..F....... [ZBX-4467] fixed the ZBX_MAX_PERIOD constant not affecting the timebar control (Pavels)
A......... [ZBX-4562] Fixed meditype.update returning wrong formatted result (Toms)
..F....... [ZBX-4187] fixed dashbord fonts on popup. fixed js error on last 20 issues (Toms)
A.F....... [ZBX-4607] fixed the script.getscriptbyhosts method returning scripts from nodes defferent from hosts (Pavels)