@@ -1152,8 +1152,7 @@ class CDiscoveryRule extends CItemGeneral {
 			return array();
 		}
 
-		$srcItemids = array();
-		$itemKeys = array();
+		$srcItemIds = array();
 		foreach ($srcGraphs as $key => $graph) {
 			// skip graphs with items from multiple hosts
 			if (count($graph['hosts']) > 1) {
@@ -1167,14 +1166,21 @@ class CDiscoveryRule extends CItemGeneral {
 				continue;
 			}
 
+			// save all used item ids to map them to the new items
 			foreach ($graph['gitems'] as $item) {
-				$srcItemids[] = $item['itemid'];
+				$srcItemIds[] = $item['itemid'];
+			}
+			if ($graph['ymin_itemid']) {
+				$srcItemIds[] = $graph['ymin_itemid'];
+			}
+			if ($graph['ymax_itemid']) {
+				$srcItemIds[] = $graph['ymax_itemid'];
 			}
 		}
 
 		// fetch source items
 		$items = API::Item()->get(array(
-			'itemids' => $srcItemids,
+			'itemids' => $srcItemIds,
 			'output' => API_OUTPUT_EXTEND
 		));
 		$srcItems = array();
@@ -1202,12 +1208,22 @@ class CDiscoveryRule extends CItemGeneral {
 		foreach ($dstGraphs as &$graph) {
 			unset($graph['graphid']);
 
-			foreach ($graph['gitems'] as $key => &$gitem) {
+			foreach ($graph['gitems'] as &$gitem) {
 				// replace the old item with the new one with the same key
 				$item = $srcItems[$gitem['itemid']];
 				$gitem['itemid'] = $dstItems[$item['key_']]['itemid'];
 
 				unset($gitem['gitemid'], $gitem['graphid']);
+			}
+
+			// replace the old axis items with the new one with the same key
+			if ($graph['ymin_itemid']) {
+				$yMinSrcItem = $srcItems[$graph['ymin_itemid']];
+				$graph['ymin_itemid'] = $dstItems[$yMinSrcItem['key_']]['itemid'];
+			}
+			if ($graph['ymax_itemid']) {
+				$yMaxSrcItem = $srcItems[$graph['ymax_itemid']];
+				$graph['ymax_itemid'] = $dstItems[$yMaxSrcItem['key_']]['itemid'];
 			}
 		}
 
