@@ -20,6 +20,8 @@ A......... [ZBX-4563] changed the hostmacro related UserMacro method interfaces 
 ..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)
 
 Bug fixes:
+A.F....... [ZBX-4710] fixed replacing graph Y axis item prototypes when cloning a discovery rule (Pavels)
+A.F....... [ZBX-4710] fixed deleting hosts when a graph ptototype uses a normal item for it's Y scale (Pavels)
 ..F....... [ZBX-4365] added plural translation support for the failed login attempt message (Pavels)
 ..F....... [ZBX-4365] fixed user being redirected to the dashboard after trying to login with an incorrect password (Pavels)
 ..F....... [ZBX-3528] fixed letter numbering of long lists (Vedmak)
